Modified display logic and updated images
Updated the code to display elements in optimized way width wise.

--- a/tagCloudExample.html
+++ b/tagCloudExample.html
@@ -9,7 +9,7 @@
 <table>
   <tr>
     <td>
-<div style="display:inline-block;min-height:80vh;min-width:60vw;background-color:cyan;">
+<div style="display:inline-block;min-height:80vh;min-width:60vw;background-color:#FFE4E1;">
   <br/>
   <h2 align="center"><span data-bind="text : content"></span></h2>
   <br/>
